2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added upper limit of FTP response buffer. The current implementation
	uses 4096bytes as a limit.
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* test/FtpConnectionTest.cc
	
2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use non-blocking socket for TCP communication to avoid possible
	blocking due to buffer full.
	* src/AbstractProxyRequestCommand.cc
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* src/HttpConnection.cc
	* src/HttpConnection.h
	* src/HttpRequestCommand.cc
	* src/InitiatorMSEHandshakeCommand.cc
	* src/InitiatorMSEHandshakeCommand.h
	* src/MSEHandshake.cc
	* src/MSEHandshake.h
	* src/Makefile.am
	* src/PeerConnection.cc
	* src/PeerConnection.h
	* src/PeerInteractionCommand.cc
	* src/PeerListenCommand.cc
	* src/ReceiverMSEHandshakeCommand.cc
	* src/ReceiverMSEHandshakeCommand.h
	* src/SocketBuffer.cc
	* src/SocketBuffer.h
	* src/SocketCore.cc
	* src/SocketCore.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Call setStatusRealtime() in constructor.
	* src/RealtimeCommand.cc
	* src/RealtimeCommand.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Call Download::setNoWait(true) to execute newly created command without
	a pause.
	* src/AbstractCommand.cc

2008-09-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added --max-file-not-found=NUM option. If aria2 receives `file not
	found' error from HTTP/FTP server NUM times without getting single
	bytes of data, then force the download to fail.
	Basically aria2 tris all URIs available. So if long list of URIs are
	specified in Metalink, then aria2 will take a long time to fail
	eventually if all URIs are outdated. This option eases this situation
	to limit the number of servers to try.
	* src/FtpNegotiationCommand.cc
	* src/HelpItemFactory.cc
	* src/HttpResponseCommand.cc
	* src/OptionHandlerFactory.cc